# ozvk

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/quad/: CMakeLists.txt  main.cpp
oz/: CMakeLists.txt
oz/oz/: oz.h
oz/oz/core/: core.h  file.cpp  file.h  timer.cpp  timer.h
oz/oz/gfx/: gfx.h
oz/oz/gfx/vulkan/: common.h  enums.h  graphics_device.cpp  graphics_device.h  objects.h  objects_internal.h  property_structs.h  resource_pool.h
oz/resources/shaders/: CMakeLists.txt
oz/src/: CMakeLists.txt
oz/src/oz/gfx/vulkan/: graphics_device.cpp
resources/shaders/glsl/: uniform.vert
